Svg alignment fix #3242

--- a/src/app/settings/Plugin.sass
+++ b/src/app/settings/Plugin.sass
@@ -4,7 +4,6 @@
     padding: 0
 
     h4
-        font-weight: 600
         margin: 0
 
     .title--buttons
