--- a/src/app/settings/Settings.sass
+++ b/src/app/settings/Settings.sass
@@ -101,6 +101,3 @@
 
         &:hover
             background-color: #bdc3c7
-
-        svg
-            width: 1rem
