--- a/src/plugins/core/widgets/time/Analogue.sass
+++ b/src/plugins/core/widgets/time/Analogue.sass
@@ -13,7 +13,7 @@
         line
             stroke: white
             stroke-linecap: round
-            transform-origin: 50% 50%
+            transform-origin: 50px 50px
             transition: transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275)
 
             &.hours
