--- a/src/styles.sass
+++ b/src/styles.sass
@@ -31,7 +31,6 @@ h4
     font-weight: 400
 
 i
-    font-family: sans-serif
     line-height: 1
     vertical-align: middle
 
